# Onboarding-Exercises

./: .gitignore
TDD/: CMakeLists.txt  README.md
TDD/App/: CMakeLists.txt
TDD/App/include/: ProtocolUtil.h  SteeringRule.h  SteeringRuntime.h  SteeringTarget.h  SteeringWorker.h
TDD/App/include/enums/: ProtocolEnum.h
TDD/App/include/exception/: DropPacketException.h  DuplicatedTargetException.h  InvalidArgumentException.h  InvalidProtocolException.h
TDD/App/src/: ProtocolUtil.cpp  SteeringRule.cpp  SteeringRuntime.cpp  SteeringTarget.cpp  SteeringWorker.cpp
TDD/App/src/exception/: DropPacketException.cpp  DuplicatedTargetException.cpp  InvalidArgumentException.cpp  InvalidProtocolException.cpp
TDD/Test/: CMakeLists.txt
TDD/Test/src/: ProtocolUtilTest.cpp  SteeringRuleTest.cpp  SteeringRuntimeMock.h  SteeringRuntimeTest.cpp  SteeringTargetTest.cpp  SteeringWorkerTest.cpp  TestUtils.h
ndpi-dpi/: CMakeLists.txt  README.md
ndpi-dpi/include/: AppState.h  ConnectionInfo.h  ConnectionKey.h  ConnectionKeyHash.h  ConnectionsMap.h
ndpi-dpi/include/structs/: ConnKeyStruct.h  ConnectionInfo.h
ndpi-dpi/src/: AppState.cpp  ConnectionInfo.cpp  ConnectionKey.cpp  ConnectionKeyHash.cpp  main.cpp
pcap-convert/: CMakeLists.txt  README.md
pcap-convert/include/: Config.h  NetworkStats.h
pcap-convert/include/structs/: ConfigStruct.h
pcap-convert/src/: Config.cpp  NetworkStats.cpp  main.cpp
